--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,9 @@
     padding-top: 130px;
     padding-bottom: 130px;
 }
-
+html, body{
+    overflow-x: hidden;
+}
 .bus {
     /* Some layout code… */
     animation: xAxis 5s infinite ease-in;
