--- a/css/about.css
+++ b/css/about.css
@@ -10,13 +10,26 @@
     position: absolute;
 } */
 
-.about{
-    margin-top: 100px;
-    margin-bottom: 60px;
-}
 
 html, body{
     overflow-x: hidden;
+}
+
+.site-blocks-cover h1{
+    font-weight: 500;
+    font-size: 80px; 
+}
+@media (max-width: 772px){
+    .site-blocks-cover h1{
+        font-weight: 400;
+        font-size: 40px; 
+    }
+}
+
+
+.about{
+    margin-top: 100px;
+    margin-bottom: 60px;
 }
 
 
